--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,11 +1,16 @@
 {
-  "navigationFallback": {
-    "rewrite": "/404.html" 
-  },
   "routes": [
     {
       "route": "/cliente-detalle.html",
       "rewrite": "/cliente-detalle.html"
     }
-  ]
+  ],
+  "navigationFallback": {
+    "rewrite": "/404.html"
+  },
+  "responseOverrides": {
+    "404": {
+      "rewrite": "/404.html"
+    }
+  }
 }
